app/assets/stylesheets/layout/_context_menu.sass
@import "../utilities/variables"

.context_menu
  float: right
  margin-top: 0.5rem
  display: inline-block
  position: relative
  @media (max-width: $media-small-max)
    float: none
    margin-top: 0
  ul
    padding: 0
    margin: 0
    @media (max-width: $media-small-max)
      margin: 0
      .hide-for-small
        display: none
  li
    list-style-type: none
    display: inline-block

.options-menu
  margin: 0
  padding-left: 0
  background-color: white
  font-size: 0.7rem
  display: none
  position: absolute
  box-shadow: 0 2px 5px 0 rgba($color-black, 0.16), 0 2px 10px 0 rgba($color-black,0.12)
  z-index: 100
  right: 0
  width: 160px
  li
    display: block
    a
      padding: 0.5rem
      display: block
      &:hover
        background-color: $color-blue-3
        color: $color-white
        text-decoration: none

